# Kraken

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  kraken.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
kraken/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logger.py  models.py  output.py
kraken/data/: __init__.py
kraken/modules/: __init__.py  base.py  cloudbridge.py  enum.py  escape.py  etcd.py  saabuse.py  secretdump.py
kraken/utils/: __init__.py  helpers.py
tests/: test_cli.py  test_helpers.py  test_models.py
