[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken-framework"
version = "2.0.0"
description = "Kubernetes and cloud native offensive suite for authorized red team engagements"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "arkanzasfeziii"}]
keywords = ["security", "kubernetes", "k8s", "container-security", "red-team", "penetration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/arkanzasfeziii/Kraken"
Repository = "https://github.com/arkanzasfeziii/Kraken"
Issues = "https://github.com/arkanzasfeziii/Kraken/issues"

[project.scripts]
kraken = "kraken.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B904"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
